// Vitest Snapshot v1

exports[`Button > should match its default snapshot 1`] = `
<button
  class=""
>
  <!-- @slot Button content. -->
  
  Button
  
</button>
`;

exports[`Button > should match its variant primary snapshot 1`] = `
<button
  class="btn btn-primary"
>
  <!-- @slot Button content. -->
  
  Button
  
</button>
`;
